# my-rss-social-bot

./: .env.example  .gitignore  Pipfile  README.md  config.yaml  example_api_config.py  pyproject.toml  report.html  requirements.txt
.bash/: run_tests_and_commit.sh
.depr/: Pipfile_depr
.github/workflows/: auto-test.yml  rss-to-linkedin.yml
_configs/: config.yaml  custom_config.yaml
_docs/: _todo.md  actions.md  config_yaml.md  pollination.mkd
_docs/api/: API_CONFIG_README.md  API_USAGE_EXAMPLE.md  Front_End_Integrations.md  UserPreferences_API_Example.md  pollination.md  pollination.mkd
_docs/linkedIn/: formatting.md
_docs/medium/: formatting.md
_temp/: blog_cache.json  last_post.txt
config/: ai.yaml  hashtags.yaml  llm.yaml  social_media.yaml  user_profile.yaml  viral_posts_i_liked.yaml
config/_data/globals/: blog_config.py  calendar_config.py  llm_config.py  viral_posts_i_liked_config.py
config/_data/user/: README.md  billing_history.py  core.py  kanban_task.py  plan.py  social_links.py  user_settings.py  utils.py
config_lead_ignite/: README.md  user.py
config_lead_ignite/_data/globals/: hashtags_config.py  social_media_config.py  user_profile_config.py
config_lead_ignite/_data/user/: __init__.py  company_info.py  marketing_profile.py  notification_preferences.py  subscription.py  team_member.py  two_factor_auth.py
config_lead_ignite/_docs/: data_model_plan.md  flow.mmd
data/: user_model.py
src/: config_loader.py  giphy.py  linkedin_bot.py  main.py  main_depr.py  medium_bot.py  openai_generator.py
src/api/: app.py  config_api.py  generate_posts.py  post_to_social.py  routes.py  sys.py
src/asset_fetch/: adobe_stock.py  candid.py  pexels.py  pixabay.py  shutterstock.py  unsplash.py
src/data/: example_ai_response.py  example_blog.py  example_config_dict.py  example_medium.py  example_wix.py
src/data/examples/: example_config_dict.py
src/ml_models/: base_generator.py  claude_generator.py  deepseek_generator.py  openai_generator.py
src/ml_models/claude/: claude_generator.py
src/ml_models/deepseek/: deepseek_generator.py
src/ml_models/huggingface/: huggingface_generator.py
src/ml_models/open_router/: openrouter_generator.py
src/ml_models/openai/: openai_generator.py
src/models/: anthropic_generator.py  claude_generator.py  deep_seek_generator.py  deepseek_generator.py  hugging_face.py  huggingface_generator.py  openai_generator.py  pollinations_async.py  pollinations_generator.py
src/rss_feed/: medium_bot.py  wix_bot.py  wordpress_bot.py
src/socials/: giphy.py  linkedin_bot.py  twitter_bot.py
src/socials/utils/: linkedin_utils.py
src/tests/: conftest.py  index.py  test_claude_async.py  test_deepseek_async.py  test_huggingface_async.py  test_linkedin_async.py  test_medium_async.py  test_openai_async.py  test_openai_generator_async.py  test_pollinations_async.py
src/tests/ai/: test_claude_async.py  test_deepseek_async.py  (+4 more)
src/utils/: circuit_breaker.py  config_loader.py  dispatch_text.py  giphy.py  index.py  medium.py  medium_helper.py  post_utils.py  prompt_builder.py  prompt_globals.py  prompt_instructions.py  workflow.py
(+115 files in other folders)
